<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/registration_bg_Color">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
                android:layout_marginLeft="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_profile_1"
                android:layout_marginTop="10sp"
                android:textColor="@color/text_black_color"
                android:textSize="25sp"
        />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/company_profile_image_singup"
            android:layout_width="132dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:src="@drawable/profile"
            app:civ_border_color="@color/border_color_profile_image"
            app:civ_border_width="2dp" />


        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp">
            <EditText
                    android:id="@+id/company_name_ET_ID_singup"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/company_name_hint"
                    android:maxLines="1"
                    android:inputType="text"
                    android:drawableLeft="@drawable/company"
                    android:drawablePadding="15dp"
            />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp">
            <EditText
                    android:id="@+id/company_location_ET_ID_singup"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/location_hint"
                    android:maxLines="1"
                    android:inputType="text"
                    android:drawableLeft="@drawable/location"
                    android:drawablePadding="15dp"
            />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp">
            <EditText
                    android:id="@+id/company_contact_ET_ID_singup"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/contact_hint"
                    android:maxLines="1"
                    android:inputType="numberDecimal"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="15dp"
            />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp">
            <EditText
                    android:id="@+id/company_email_ET_ID_singup"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/e_mail_hint_singup"
                    android:maxLines="1"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="15dp"
            />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp">
            <EditText
                    android:id="@+id/company_password_ET_ID_singup"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:hint="@string/password_hint"
                    android:maxLines="1"
                    android:inputType="textWebPassword"
                    android:drawableLeft="@drawable/pass_icon"
                    android:drawablePadding="30dp" />
        </androidx.cardview.widget.CardView>

        <Button
                android:id="@+id/company_next_btn_1_ID_singup"
                android:layout_width="100sp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:background="@drawable/signup_btn_bg"
                android:text="@string/arrow_button"
                android:layout_margin="10dp"
        android:layout_marginBottom="10dp"/>
    </LinearLayout>

</ScrollView>