<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.Login_Activity"
        android:fillViewport="true">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/login_bg_color">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

            <ImageView
                    android:id="@+id/logp_app_imageView_ID"
                    android:layout_width="@dimen/logo_Width"
                    android:layout_height="@dimen/logo_height"
                    android:src="@drawable/logo"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp">
            <EditText
                    android:id="@+id/email_login_ET_ID"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_email_ET_55"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/text_Size_email_20"
                    android:hint="@string/e_mail_hint"
                android:fontFamily="@font/ebrima"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="15dp"
                    android:paddingLeft="10dp"
                    android:maxLines="1"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edit_text_bg"/>
            <EditText
                    android:id="@+id/password_login_ET_ID"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_password_ET_55"
                    android:textColor="@color/text_black_color"
                    android:textSize="@dimen/text_Size_password_20"
                    android:maxLines="1"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/password_hint"
                    android:drawableLeft="@drawable/pass_icon"
                    android:drawablePadding="30dp"
                    android:paddingLeft="10dp"
                    android:inputType="textPassword"/>
            <TextView
                    android:id="@+id/forget_password_TV_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_forget_password_18"
                    android:layout_marginTop="5dp"
                    android:text="@string/forget_password"
                    android:layout_gravity="right"
                    android:gravity="center"
                android:fontFamily="@font/raleway_italic"
                    android:textColor="@color/text_white_color"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".9"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical">

            <Button
                    android:id="@+id/login_btn_ID"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_login_button_55"
                    android:background="@drawable/login_button_bg"
                    android:text="@string/login_text"
                    android:textSize="@dimen/text_size_login_button_20"
                android:fontFamily="@font/raleway_blackitalic"/>
            <TextView
                    android:id="@+id/register_company_TV_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register_company"
                    android:textColor="@color/text_white_color"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".1"
                android:layout_gravity="center">
            <TextView
                    android:id="@+id/powered_by_rocketechit_TV_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/powered_by_rocktechit"
                    android:textColor="#00C6FF"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>