<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/registration_bg_Color"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="30sp"
            android:text="@string/attendance_rule_2"
            android:textColor="@color/text_black_color"
            android:textSize="25sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:id="@+id/entry_time_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:text="@string/entry_time_signup"
                    android:textColor="@color/text_black_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/entry_time_TV_ID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:textColor="#284A81"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:id="@+id/exit_time_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:text="@string/exit_time_signup"
                    android:textColor="@color/text_black_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/exit_time_TV_ID"

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:textColor="#284A81"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:id="@+id/penalty_time_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:text="@string/penalty_time_signup"
                    android:textColor="@color/text_black_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/penalty_time_TV_ID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:textColor="#284A81"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/company_next_btn_2_ID_singup"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:background="@drawable/signup_btn_bg"
            android:text="@string/arrow_button" />

    </LinearLayout>
</ScrollView>